fixed off-center issue! centered terms n cond, changed submit button to button

--- a/Registration Form/form-style.css
+++ b/Registration Form/form-style.css
@@ -8,7 +8,7 @@ body{
     font-size: 16px;
 }
 
-h1, p{
+h1, p, .tnc{
     margin: 1em auto;
     text-align: center;
 }
@@ -16,13 +16,15 @@ h1, p{
 form{
     width: 60vw;
     max-width: 500px;
-    min-width: 300px;
-    margin: 0 auto;
+    min-width: 200px;
+    margin: 0 auto 0 auto;
 }
 
 fieldset{
     border: none;
-    padding: 2rem 0;
+    margin: auto 20%;
+    max-width: 500px;
+    padding: 2rem auto 2rem auto;
     border-bottom: 3px solid #4b4b4f;
 }
 
@@ -33,4 +35,15 @@ fieldset:last-of-type{
 label{
     display: block;
     margin: .5rem auto;
+}
+
+input, textarea, select{
+    width: 100%;
+    margin: 10px 0 0 0;
+}
+
+.inline{
+    width: unset;
+    margin: 0 .5em 0 0;
+    vertical-align: middle;
 }
